# fmuloader

./: .bumpversion.toml  .gitignore  Makefile  README.md  pyproject.toml
.github/instructions/: project.md  python.md
examples/: cc_fmi3_maplesim.ipynb
src/fmuloader/: fmi2.py  fmi3.py
tests/: conftest.py  test_fmi2.py  test_fmi3.py  test_readme_examples.py
